Bug 506911 - Show (Git) Diff: Poor readability compared to editor
Summary: Show (Git) Diff: Poor readability compared to editor
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: 25.04.3
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-07-11 12:52 UTC by madness742
Modified: 2025-07-13 17:23 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Showcase of the editor, using Breeze Dark. (201.70 KB, image/png)
2025-07-11 12:52 UTC, madness742
Details
Showcase of git diff, using Breeze Dark. (194.76 KB, image/png)
2025-07-11 12:52 UTC, madness742
Details
Showcase of git diff, using Breeze Light. (288.48 KB, image/png)
2025-07-11 12:53 UTC, madness742
Details
Breeze_dark_diff_view_not_reproduced (136.92 KB, image/png)
2025-07-12 10:01 UTC, Waqar Ahmed
Details

Note You need to log in before you can comment on or make changes to this bug.
Description madness742 2025-07-11 12:52:34 UTC
Created attachment 183158 [details]
Showcase of the editor, using Breeze Dark.

SUMMARY
The 'Show (Git) Diff' feature has very poor readability compared to the editor. Which makes reading code near impossible with certain built-in themes.

STEPS TO REPRODUCE
1. Configure Kate Color theme to "Breeze Dark" to make the issue more noticeable.
2. Open any Git project as a folder.
3. Right click on a file -> Show Git History.
4. Click on any Git History to show the Diff.

OBSERVED RESULT
In Light Mode (Breeze Light), the coloured line numbers are hard to read.
In Dark Mode (Breeze Dark),  half the text becomes near impossible to read.

EXPECTED RESULT
There should be more contrast to improve the readability.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Fedora 42
KDE Plasma Version: 6.4.2
KDE Frameworks Version: 6.15.0
Qt Version: 6.9.1
Comment 1 madness742 2025-07-11 12:52:57 UTC
Created attachment 183159 [details]
Showcase of git diff, using Breeze Dark.
Comment 2 madness742 2025-07-11 12:53:07 UTC
Created attachment 183160 [details]
Showcase of git diff, using Breeze Light.
Comment 3 Waqar Ahmed 2025-07-12 09:59:03 UTC
Can't reproduce
Comment 4 Waqar Ahmed 2025-07-12 10:01:12 UTC
Created attachment 183181 [details]
Breeze_dark_diff_view_not_reproduced

- Explicitly selected Breeze Dark theme in the settings dialog.
- Breeze Light theme is set in System settings.
Comment 5 Waqar Ahmed 2025-07-12 10:46:59 UTC
Breeze dark issue seems to be that you changed the color theme while the "diff" was open. It doesn't react to that. Reopening the diff would work better I guess. Can fix that.

Breeze light does have a readability issue it seems.
Comment 6 Bug Janitor Service 2025-07-12 11:09:13 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/kate/-/merge_requests/1811
Comment 7 Waqar Ahmed 2025-07-12 12:01:18 UTC
Git commit 4c5df53a65eb1de837e4364d7097a2889b1bb625 by Waqar Ahmed.
Committed on 12/07/2025 at 10:48.
Pushed by waqar into branch 'master'.

Rehighlight diff when editor theme changes

M  +11   -0    apps/lib/diff/diffwidget.cpp
M  +2    -2    apps/lib/diff/diffwidget.h

https://invent.kde.org/utilities/kate/-/commit/4c5df53a65eb1de837e4364d7097a2889b1bb625
Comment 8 Waqar Ahmed 2025-07-12 12:01:29 UTC
Git commit 5b1dab7918fe887281d1fd8358ef45b6081dfe74 by Waqar Ahmed.
Committed on 12/07/2025 at 11:08.
Pushed by waqar into branch 'master'.

Use darkRed/darkGreen in light mode

It has better contrast

M  +2    -2    apps/lib/diff/diffeditor.cpp
M  +2    -2    apps/lib/diff/difflinenumarea.cpp

https://invent.kde.org/utilities/kate/-/commit/5b1dab7918fe887281d1fd8358ef45b6081dfe74
Comment 9 Christoph Cullmann 2025-07-13 17:22:44 UTC
Git commit 5a269d6d5d0b6596989c170b1f9f7bfdf48c8126 by Christoph Cullmann.
Committed on 13/07/2025 at 17:22.
Pushed by cullmann into branch 'release/25.08'.

Rehighlight diff when editor theme changes


(cherry picked from commit 4c5df53a65eb1de837e4364d7097a2889b1bb625)

Co-authored-by: Waqar Ahmed <waqar.17a@gmail.com>

M  +11   -0    apps/lib/diff/diffwidget.cpp
M  +2    -2    apps/lib/diff/diffwidget.h

https://invent.kde.org/utilities/kate/-/commit/5a269d6d5d0b6596989c170b1f9f7bfdf48c8126
Comment 10 Christoph Cullmann 2025-07-13 17:23:13 UTC
Git commit 693c88e51285b5663de3c06461d4452fa03d200f by Christoph Cullmann.
Committed on 13/07/2025 at 17:23.
Pushed by cullmann into branch 'release/25.08'.

Use darkRed/darkGreen in light mode

It has better contrast


(cherry picked from commit 5b1dab7918fe887281d1fd8358ef45b6081dfe74)

Co-authored-by: Waqar Ahmed <waqar.17a@gmail.com>

M  +2    -2    apps/lib/diff/diffeditor.cpp
M  +2    -2    apps/lib/diff/difflinenumarea.cpp

https://invent.kde.org/utilities/kate/-/commit/693c88e51285b5663de3c06461d4452fa03d200f