Rehighlight diff when editor theme changes

BUG: 506911